# SearchBox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  build.rs  config.py  docker-compose.windows.yml  docker-compose.yml  entrypoint.sh  fly.toml  models.py  pyproject.toml  schema.sql  test_zim_api.py
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml  winget.yml
docs/: README.md  index.html
docs/api/: README.md  endpoints.md  examples.md
docs/architecture/: database.md  extractor.md  overview.md  security.md
docs/community/: README.md  code-of-conduct.md  support.md
docs/contributing/: README.md  code-style.md  pr-process.md  setup.md  testing.md
docs/deployment/: README.md  cloud.md  docker.md  production.md  self-hosted.md
docs/features/: README.md  ai-summaries.md  bookmarks.md  explore.md  folder-indexing.md  qbittorrent.md  search.md  vault.md  zim.md
docs/getting-started/: README.md  first-search.md  installation.md  quickstart.md
docs/license/: README.md  agpl-explained.md  commercial.md
docs/screenshots/: README.md
docs/troubleshooting/: README.md  common-issues.md  debugging.md  faq.md
extractor/: CMakeLists.txt
extractor/src/: main.cpp
middleware/: __init__.py
routes/: auth.py  documents.py  folders.py  helpers.py  meilisearch_routes.py  ollama.py  organization.py  pages.py  qbittorrent.py  settings.py  vault.py  zim.py
searchbox_extras/: wiki_dump.py
services/: __init__.py  config_service.py  document_service.py  meilisearch_service.py  migration_service.py  organization_service.py  qbittorrent_service.py  vault_service.py  zim_service.py
src/: assets.rs  config.rs  db.rs  error.rs  integration_tests.rs  main.rs  state.rs  templates.rs
src/auth/: mod.rs  password.rs  session.rs  throttle.rs
src/jobs/: mod.rs
src/models/: bookmark.rs  folder.rs  mod.rs  qbt.rs  recovery_key.rs  settings.rs  user.rs  vault.rs
src/routes/: archives.rs  auth.rs  documents.rs  folders.rs  health.rs  meili.rs  mod.rs  ollama.rs  pages.rs  picker.rs  qbittorrent.rs  settings.rs  update.rs  vault.rs
src/services/: extractor.rs  meili.rs  meili_process.rs  mod.rs  ollama.rs  secret.rs  thumbnail.rs  updater.rs
src/vault/: crypto.rs  mod.rs
static/css/: base.css  explore.css  images.css  index.css  settings.css  view.css
static/js/: base.js  explore.js  images.js  index.js  settings.js  view.js
templates/: base.html  explore.html  images.html  index.html  login.html  reset_password.html  settings.html  setup.html  view.html
utils/: auth.py  crypto.py  decorators.py  image_extractor.py  ollama_client.py  ollama_helper.py  rag_helper.py  resource_monitor.py  user_auth.py
wix/: build.ps1  main.wxs  make-icon.ps1
