[project]
name = "searchbox"
version = "2.3.0"
description = "Local document search engine with full-text search, image search, encrypted vault, and optional AI summaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.0",
    "flask-wtf>=1.2.0",
    "meilisearch>=0.40.0",
    "pillow>=12.1.0",
    "libzim>=3.4.0",
    "beautifulsoup4>=4.12.0",
]
